--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Calculator</title>
+		<title>Payoneer USD to EUR calculator</title>
 		<style>
 			body {
 			    text-align: center;
