--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 		</style>
 	</head>
 	<body>
-		<h1>Calculator</h1>
+		<h1>Payoneer USD to EUR calculator</h1>
 		<input type="number" id="inputValue" placeholder="Enter a value" />
 		<button onclick="calculate()">Calculate</button>
-		<div id="result"></div>
+		<div id="result">EUR=</div>
 
 		<script src="script.js"></script>
 	</body>
