--- a/index.html
+++ b/index.html
@@ -1,42 +1,51 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Payoneer USD to EUR calculator</title>
-		<style>
-			body {
-			    text-align: center;
-			    font-family: Arial, sans-serif;
-			}
 
-			h1 {
-			    margin-top: 50px;
-			}
+<head>
+	<title>Payoneer USD to EUR calculator</title>
+	<style>
+		body {
+			text-align: center;
+			font-family: Arial, sans-serif;
+		}
 
-			input[type="number"] {
-			    margin-top: 20px;
-			    padding: 10px;
-			    font-size: 16px;
-			}
+		h1 {
+			margin-top: 50px;
+		}
 
-			button {
-			    margin-top: 20px;
-			    padding: 10px 20px;
-			    font-size: 16px;
-			}
+		input[type="number"] {
+			margin-top: 20px;
+			padding: 10px;
+			font-size: 16px;
+		}
 
-			#result {
-			    margin-top: 30px;
-			    font-size: 18px;
-			    font-weight: bold;
-			}
-		</style>
-	</head>
-	<body>
-		<h1>Payoneer USD to EUR calculator</h1>
-		<input type="number" id="inputValue" placeholder="Enter a value" />
-		<button onclick="calculate()">Calculate</button>
-		<div id="result">EUR=</div>
+		button {
+			margin-top: 20px;
+			padding: 10px 20px;
+			font-size: 16px;
+		}
 
-		<script src="script.js"></script>
-	</body>
+		#result {
+			margin-top: 30px;
+			font-size: 18px;
+			font-weight: bold;
+		}
+	</style>
+</head>
+
+<body>
+	<h1>Kuki's calculator</h1>
+	<input type="number" id="inputValue" placeholder="Enter a value" />
+	<button onclick="calculate()">Calculate</button>
+	<div id="result"></div>
+
+	<h1>By THE KUKI</h1>
+	<h2>Te amo trola</h2>
+
+	<img src="/image.jpg" alt="Imagen del cholo">
+
+
+	<script src="script.js"></script>
+</body>
+
 </html>
